[project]
name = "workflow3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.2.0",
    "langchain-openai>=1.1.6",
    "langgraph>=1.0.5",
    "opencv-python>=4.12.0.88",
    "psutil>=5.9.0",
    "torch>=2.9.1",
]
